--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 						<footer>
 							<ul class="items">
 								<li>
+									<h3>Consultório</h3>
+									<a href="https://www.google.com/maps/place/Neiva+Est%C3%A9tica+E+Cia/@-22.9499353,-47.3151489,15z/data=!4m5!3m4!1s0x0:0x838e6fd4454d5007!8m2!3d-22.9499353!4d-47.3151489" target="_blank">Google Maps</a>
+								</li>
+								<li>
 									<h3>Email</h3>
 									<a href="mailto:kpgf@hotmail.com">kpgf@hotmail.com</a>
 								</li>
